[project]
name = "voicebox-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dolica Akello-Egwel", email = "d.akelloegwel@lcc.arts.ac.uk" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
