[project]
name = "voicebox-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dolica Akello-Egwel", email = "d.akelloegwel@lcc.arts.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    "uuid>=1.30",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
